[gd_scene load_steps=12 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://Hack_Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://bing.wav" type="AudioStream" id=4]
[ext_resource path="res://fail.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 22
outline_size = 1
outline_color = Color( 0.0352941, 0.521569, 0.0705882, 0.780392 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.02, 0.02, 0.02, 0.870588 )
position = Vector2( 178.5, 400 )
scale = Vector2( 6.42188, 13.25 )
texture = ExtResource( 1 )

[node name="GameTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
margin_right = 360.0
margin_bottom = 64.0
alignment = 1

[node name="TimeLabel" type="Label" parent="Control/HBoxContainer"]
margin_left = 30.0
margin_top = 21.0
margin_right = 129.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "Time:    "

[node name="TimeCount" type="Label" parent="Control/HBoxContainer"]
margin_left = 133.0
margin_top = 21.0
margin_right = 155.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "10"

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer"]
margin_left = 159.0
margin_right = 223.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 0 )
color = Color( 1, 1, 1, 0 )

[node name="LevelLabel" type="Label" parent="Control/HBoxContainer"]
margin_left = 227.0
margin_top = 21.0
margin_right = 315.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 3 )
text = "Level:  "

[node name="LevelCount" type="Label" parent="Control/HBoxContainer"]
margin_left = 319.0
margin_top = 21.0
margin_right = 330.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 4 )
text = "1"

[node name="Popup" type="Popup" parent="."]
pause_mode = 2
margin_left = 64.0
margin_top = 128.0
margin_right = 288.0
margin_bottom = 448.0
popup_exclusive = true

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.5
margin_top = -132.0
margin_right = 113.5
margin_bottom = 132.0
alignment = 1

[node name="FixedLabel" type="Label" parent="Popup/VBoxContainer"]
margin_top = 74.0
margin_right = 227.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 5 )
text = "Game Over!"
align = 1
valign = 1

[node name="VarLabel" type="Label" parent="Popup/VBoxContainer"]
margin_top = 105.0
margin_right = 227.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 5 )
text = "Level "
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="Popup/VBoxContainer"]
margin_top = 136.0
margin_right = 227.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 24 )
color = Color( 1, 1, 1, 0 )

[node name="RetryButton" type="Button" parent="Popup/VBoxContainer"]
margin_top = 164.0
margin_right = 227.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 6 )
text = "Retry"

[node name="Bing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Fail" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="Popup/VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
